--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -96,7 +96,7 @@
                                 <i class="bi bi-gear"></i> Settings
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#" onclick="logout()">
+                            <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                                 <i class="bi bi-box-arrow-right"></i> Logout
                             </a></li>
                         </ul>
@@ -180,20 +180,8 @@
     <script>
         // Logout function
         function logout() {
-            fetch('/api/v1/auth/logout', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                window.location.href = data.redirect_url || '/';
-            })
-            .catch(error => {
-                console.error('Logout error:', error);
-                window.location.href = '/';
-            });
+            // Simple redirect to logout route
+            window.location.href = "{{ url_for('auth.logout') }}";
         }
 
         // Global search functionality
